--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -29,7 +29,13 @@
 }
 img{
     cursor: pointer;
+   
 }
+.portimg{
+    height: 500px;
+    /* width: 50px; */
+}
+
 .layer{
     position: absolute;
     inset: 0;
