--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 .navColor{
-  background-color: #2C3E50;
+  background: linear-gradient(to right, #990000, #4B0082);
 }
 
 .active{
@@ -24,10 +24,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #1ABC9C;
+   background: linear-gradient(to bottom right, #990000, #000000);
     height: 700px;
 }
 
+.imgIcon{
+  width: 50px;
+  border-radius: 50%;
+}
 
 .icon_style::after{
     content: "";
@@ -70,7 +74,7 @@ input:focus{
 
 
 .footer{
-  background-color: #2C3E50;
+    background: linear-gradient(to right, #990000, #4B0082);
 }
 .circle-icon {
   width: 45px;
@@ -94,5 +98,5 @@ input:focus{
 }
 
 .endFooter{
-  background-color:#1A252F ;
+background: linear-gradient(to right, #111111, #2C2C2C);
 }
